--- a/gb/20/10/8/n12463151.md
+++ b/gb/20/10/8/n12463151.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zdubkf396/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdubkf396/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zdubkf396/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdubkf396/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zdubkf396/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdubkf396/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zdubkf396/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdubkf396/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zdubkf396/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdubkf396/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zdubkf396/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdubkf396/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zdubkf396/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdubkf396/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zdubkf396/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdubkf396/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/zdubkf396/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zdubkf396/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/zdubkf396/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zdubkf396/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zdubkf396/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zdubkf396/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zdubkf396/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zdubkf396/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：红二代四分五裂 习近平为谁保江山？</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/6ba1fa4749047afa0d3edbbe49f527ce-1.png" />
+<a href="https://dhw62qyyxrv4n.cloudfront.net/Z6j1vQXzl"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>中共总书记习近平的资料照。(FRED DUFOUR/AFP/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年10月09日讯】中共五中全会即将召开，<ahref="https://github.com/zdubkf396/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>仍在为“保党”做最后的挣扎，曾经支持习的<ahref="https://github.com/zdubkf396/djy/blob/master/gb/tag/%E7%BA%A2%E4%BA%8C%E4%BB%A3.md#1">红二代</a>却一个接一个离他而去。</p>
-<h2><ahref="https://github.com/zdubkf396/djy/blob/master/gb/tag/%E6%9B%BE%E5%BA%86%E7%BA%A2.md#1">曾庆红</a>成为反习势力的总代表</h2>
-<p><ahref="https://github.com/zdubkf396/djy/blob/master/gb/tag/%E6%9B%BE%E5%BA%86%E7%BA%A2.md#1">曾庆红</a>之父曾山，曾担任过中共东南局、华中局组织部长，商业部长、交通部长、内务部长等。曾母邓六金，是参加过长征的27个女人之一，曾负责筹办中共华东局机关保育院并担任院长，该保育院被称为“太子党”的摇篮。</p>
+	<p>【大纪元2020年10月09日讯】中共五中全会即将召开，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>仍在为“保党”做最后的挣扎，曾经支持习的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BA%A2%E4%BA%8C%E4%BB%A3.md#1">红二代</a>却一个接一个离他而去。</p>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9B%BE%E5%BA%86%E7%BA%A2.md#1">曾庆红</a>成为反习势力的总代表</h2>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9B%BE%E5%BA%86%E7%BA%A2.md#1">曾庆红</a>之父曾山，曾担任过中共东南局、华中局组织部长，商业部长、交通部长、内务部长等。曾母邓六金，是参加过长征的27个女人之一，曾负责筹办中共华东局机关保育院并担任院长，该保育院被称为“太子党”的摇篮。</p>
 <p>曾庆红是中共江泽民派系的第二号人物，曾任中央办公厅主任、中央书记处书记、中央组织部长、中共政治局常委、国家副主席、中央党校校长。其二弟曾庆淮曾任文化部高官，替曾庆红掌管香港特务与大陆和港台演艺界；三弟曾庆洋，军事科学院军制研究部部长，少将；四弟曾庆源，空军后勤部副部长，少将；妹妹曾海生，总参管理保障部政委，少将；侄女王晓玲，曾任广州副市长兼纪委书记。</p>
-<p>有传闻说，曾庆红曾推荐<ahref="https://github.com/zdubkf396/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>做接班人。但曾这么做，只是权宜之计：一是用习阻止胡锦涛的接班人李克强上台，二是当时<ahref="https://github.com/zdubkf396/djy/blob/master/gb/tag/%E7%BA%A2%E4%BA%8C%E4%BB%A3.md#1">红二代</a>中的薄熙来在党内得票太少，三是习外表比较憨厚。</p>
+<p>有传闻说，曾庆红曾推荐<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>做接班人。但曾这么做，只是权宜之计：一是用习阻止胡锦涛的接班人李克强上台，二是当时<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BA%A2%E4%BA%8C%E4%BB%A3.md#1">红二代</a>中的薄熙来在党内得票太少，三是习外表比较憨厚。</p>
 <p>2012年2月6日，原重庆市公安局长王立军叛逃至美国驻成都领事馆，将薄熙来等准备通过“政变”把习赶下台的阴谋泄露给美国。薄的后台是江泽民、曾庆红。习得知这一消息后，从2013年1月发起向江、曾夺权的反腐打虎战役。5年查处440个副省（部）级及以上高官，其中大多数是江、曾提拔重用的。一段时间内，江、曾也在可能被抓捕之列。从此，江、曾与习你死我活的关系形成了。</p>
 <p>在中共十九大前，在形势非常不利于江、曾的情况下，江、曾表面服软，与习妥协。习自以为大权到手，擒贼未擒王，没有抓捕江、曾。从此，习没有过一天安稳日子。中共十九大至今，江、曾及其亲信，利用一切机会，捆绑习，把习往火坑里推。</p>
 <p>2020年，江已94岁，只剩最后一口气了，江派的幕后总指挥，实际是曾庆红。曾成为海内外倒习势力的幕后总指挥。</p>
@@ -23,29 +23,29 @@
 <h2>胡耀邦之子胡德华</h2>
 <p>胡德华是前中共中央总书记胡耀邦之子，曾任《炎黄春秋》杂志社副社长，与李锐、杜导正等中共体制内改革派人士关系密切。</p>
 <p>2016年7月《炎黄春秋》被中共以文革方式夺权后，胡德华对媒体表示：《炎黄春秋》不是国企也不是党产，它的资产都是《炎黄春秋》员工25年用劳动换来的。如果一纸文件就把它归公，就像是掠夺行为。</p>
-<p>2013年2月27日，在《炎黄春秋》举办的新春联谊会上，针对习近平称苏共亡党时，“竟无一人是男儿”，没什么人出来抗争，胡德华引用俄共总书记久加诺夫的话说，苏共垮台，源于苏共对政治权利的垄断，对经济和一切资源的垄断，对“真理”的垄断。了解了这些情况，就不值得为苏共垮台悲伤。</p>
+<p>2013年2月27日，在《炎黄春秋》举办的新春联谊会上，针对习近平称苏共亡党时，“竟无一人是男儿”，没什么人出来抗争，胡德华引用俄共总书记久加诺夫的话说，苏共垮台，源于苏共对政治权力的垄断，对经济和一切资源的垄断，对“真理”的垄断。了解了这些情况，就不值得为苏共垮台悲伤。</p>
 <p>针对习近平说的，不能用改革开放后的历史否定改革开放前的历史，也不能用改革开放前的历史否定改革开放后的历史。胡德华说：“不能否定前三十年，我们是不是文革不能否定？……是不是毛主席所说的习总的爸爸习仲勋‘利用小说进行反党，是一大发明’也不能否定？”</p>
 <p>胡德华还说，一个政党出现危机时，可以“不管谁要反对我就开坦克来跟他干”，也可以顺应民意，公开真相，求得谅解。台湾的蒋经国反省“二二八”镇压事件，求得台湾民众谅解，国民党终于再次赢得选举上台。</p>
 <p>这才是明智的解决方式。“如果说连这一步都没有，大家什么真相都不知道，我们怎么知道该保卫还是不该保卫，该保卫谁还是不该保卫谁。”</p>
 <h2>赵紫阳的四子一女</h2>
 <p>前中共中央总书记赵紫阳有四子一女：赵大军、赵二军、赵三军、赵四军、赵亮。去年8月17日是赵紫阳的百岁冥诞。他们在香港《明报》发表文章，在缅怀赵紫阳一生的同时，点评时政。文章说：“今天，我们面临的，是思想的退化、哲学的贫困；失去了龙腾虎跃的深刻探索，看不见微弱闪烁的智慧火花；既没有人道关怀的点滴温暖，也没有动人心弦的丝毫感动。这是百年未见的精神困局。”“经过多年的优败劣胜的‘逆向淘汰’后”，中共内部“刚正耿介者寥寥无几；寡廉鲜耻辈洋洋大观。”文章虽没有点名习近平，但处处让人联想到赵紫阳和习近平的不同。</p>
 <p>文章特别写道：“失去了以理服人的耐心，失去了妥协宽容的智慧，就会失去进步的能力。”文章最后写道：“我们希望改变中国，希望改变世界，为什么我们不能改变一下自己呢？”这是在含蓄地对习近平劝善。至2020年的今天，再也没有看到赵家兄妹发表此类劝善之言。</p>
-<h2>中共大将之子<ahref="https://github.com/zdubkf396/djy/blob/master/gb/tag/%E7%BD%97%E5%AE%87.md#1">罗宇</a></h2>
-<p><ahref="https://github.com/zdubkf396/djy/blob/master/gb/tag/%E7%BD%97%E5%AE%87.md#1">罗宇</a>是中共大将罗瑞卿之子，曾任职总参谋部；1990年因不满“六四”天安门屠杀，与中共分道扬镳并离国出走；1992年被江泽民颁令开除党籍、军籍；现定居美国。</p>
+<h2>中共大将之子<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BD%97%E5%AE%87.md#1">罗宇</a></h2>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BD%97%E5%AE%87.md#1">罗宇</a>是中共大将罗瑞卿之子，曾任职总参谋部；1990年因不满“六四”天安门屠杀，与中共分道扬镳并离国出走；1992年被江泽民颁令开除党籍、军籍；现定居美国。</p>
 <p>据罗宇介绍：习近平的父亲习仲勋被毛泽东打倒时，习近平才15岁，习的母亲齐心经常到家里看望罗宇的母亲，持续达10年之久。在罗宇的印象中，习的父母非常亲切、诚恳。习仲勋被毛整了16年，晚年又挨邓小平的整，被软禁在深圳。罗宇的母亲每年到广东过冬，都去探望习的父母。罗宇认为，习仲勋是中共党内的民主派、开明派。习近平上台后，罗宇对习寄予很大的希望。</p>
 <p>从2015年12月3起，罗宇开始给习写公开信，在香港《苹果日报》发表，苦口婆心劝习走民主化道路，一直写到2018年9月6日，共写了31封致“习近平老弟”的信。</p>
 <p>曾有记者问罗宇：这些信习近平看得到吗？罗宇回答：“他看得到，这是从‘上书房行走的人’那里传过来的，说你写的那些信，所有常委的桌子上都有。”“他看到什么程度，能够听到什么程度，我就不知道了。我希望他能够想一想吧。我给他写的信，任何人看都是好意，没有一点恶意。”</p>
-<p>但是，罗宇没有看到习走向民主化的任何迹向，相反，越来越向文革倒退。罗宇在接受美国之音记者采访时说：“如果习近平想把今天的中国社会往毛泽东时代倒退的话，那就肯定完蛋了。”</p>
+<p>但是，罗宇没有看到习走向民主化的任何迹象，相反，越来越向文革倒退。罗宇在接受美国之音记者采访时说：“如果习近平想把今天的中国社会往毛泽东时代倒退的话，那就肯定完蛋了。”</p>
 <p>可能是对习近平从抱有希望，到失望，到绝望吧，在2018年9月6日发表第31封信之后，到2020年10月8日的今天，我再也没有看到罗宇给习写过一封信。</p>
 <h2>红二代中敢言的任志强</h2>
 <p>任志强有三重身份，一是红二代，他父亲任泉生曾任中共商业部副部长；二是企业家，他曾任北京市华远地产公司董事长；三是国家副主席王岐山的密友。</p>
-<p>习近平2012年11月上台执政，王歧山担任中共政治局常委、中纪委书记后，任志强发表过许多“出格”言论。比如，2013年，任志强在北京大学演讲时说，中共体制烂透了，号召推倒这堵墙。2015年2月14日，出席“中国经济50人论坛年会”时说：“政府过度强调了枪杆子和刀把子，反对西方的价值观，文革之风又起来了。”同年9月21日，任志强在微博中称“‘我们是共产主义接班人’这个口号骗了十几年”。任志强的“出格”言论还有：“习近平班子‘让车轮倒转’，军队‘枪口对内’”，“习近平‘连续出臭棋’”，“共产党极权、不合法”等。</p>
-<p>2016年2月19日，针对习近平“党媒姓党”的说法，任志强在微博中写道：“当所有的媒体有了姓，并且不代表人民的利益时，人民就被抛弃到被遗忘的角落了！”此言一出，中共党媒立即掀起一股文革式的批判浪潮。2016年2月29日，中纪委书记王歧山领导的《中国纪检监察报》，发表《千人之诺诺，不如一士之谔谔》。之后，各大媒体对任志强的批判突然停止。同年5月2日，任志强受到“留党察看一年”的处分。</p>
+<p>习近平2012年11月上台执政，王岐山担任中共政治局常委、中纪委书记后，任志强发表过许多“出格”言论。比如，2013年，任志强在北京大学演讲时说，中共体制烂透了，号召推倒这堵墙。2015年2月14日，出席“中国经济50人论坛年会”时说：“政府过度强调了枪杆子和刀把子，反对西方的价值观，文革之风又起来了。”同年9月21日，任志强在微博中称“‘我们是共产主义接班人’这个口号骗了十几年”。任志强的“出格”言论还有：“习近平班子‘让车轮倒转’，军队‘枪口对内’”，“习近平‘连续出臭棋’”，“共产党极权、不合法”等。</p>
+<p>2016年2月19日，针对习近平“党媒姓党”的说法，任志强在微博中写道：“当所有的媒体有了姓，并且不代表人民的利益时，人民就被抛弃到被遗忘的角落了！”此言一出，中共党媒立即掀起一股文革式的批判浪潮。2016年2月29日，中纪委书记王岐山领导的《中国纪检监察报》，发表《千人之诺诺，不如一士之谔谔》。之后，各大媒体对任志强的批判突然停止。同年5月2日，任志强受到“留党察看一年”的处分。</p>
 <p>2020年2月23日，中共召开“17万人大会”，习近平发表长篇讲话，谈对疫情的防控问题。任志强看了习的讲话和一些人的吹牛拍马之文后，写了一篇炮轰习的长文。文章指出：“人们没有看到大会上有批评的意见，没有对事实真相的追究与披露，没有查清疫情暴发的原因，更没有人检讨责任和承担责任，却在试图用各种伟大的成绩掩盖事实的真相”。“十七年前的教训（指2003年的SARS疫情失控），没有让这个体制发生彻底的改变，才有了今天的疫情再次暴发。此次不解决根子上的问题，下次也一定会再出现更大的灾难。”</p>
 <p>就因为这篇文章，9月22日，任志强被扣上“贪污”等4项罪名，判刑18年。</p>
 <p>任志强不是孤立的个人，他背后站着一批红二代、企业家、高官，习重判任志强，必将加速红二代、企业家群体、高官的分裂，新增一批反习的人。</p>
-<h2>红二代中的教授<ahref="https://github.com/zdubkf396/djy/blob/master/gb/tag/%E8%94%A1%E9%9C%9E.md#1">蔡霞</a></h2>
-<p>中共中央党校教授<ahref="https://github.com/zdubkf396/djy/blob/master/gb/tag/%E8%94%A1%E9%9C%9E.md#1">蔡霞</a>，外祖父是中共元老，她的母亲、舅舅、姨妈都曾是中共军队的官员。</p>
+<h2>红二代中的教授<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%94%A1%E9%9C%9E.md#1">蔡霞</a></h2>
+<p>中共中央党校教授<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%94%A1%E9%9C%9E.md#1">蔡霞</a>，外祖父是中共元老，她的母亲、舅舅、姨妈都曾是中共军队的官员。</p>
 <p>今年6月，蔡霞的一个内部讲话录音在网上广传。其中谈到，中共已是一个“政治僵尸”，习近平（未点名）完全成了一个黑帮老大，谁想出来挽救这个危局都不可能。出路是换人，如果不解决习的问题，这个体制就是自由落体。</p>
 <p>对中共强推“港版国安法”，蔡霞认为，“表面上看是中共威胁挑战香港人民的自由权利，实际上是威胁全球秩序和人类文明价值……中共是人类公敌”。</p>
 <p>8月17日，蔡霞被中共开除党籍，取消退休待遇。据说连她在国内的银行账户也被冻结。如果蔡霞人不在美国，而在中国大陆，会怎么样？</p>
@@ -66,48 +66,50 @@
 <p>2020年，中共隐瞒疫情等导致大瘟疫蔓延全世界、以美国为首的自由世界已经发起跟中共算总账的“灭共”大战。中共已处于最后解体的前夜。</p>
 <p>习近平上台前，红二代济济一堂支持习的局面已经一去不复返了。现在谁是习的铁杆支持者？曾经帮习夺权立下功劳的国家副主席王岐山，基本靠边站了；曾经帮习对付习最大的政敌江、曾的国务院总理李克强，一再受排挤与压制；中南海最大的奸臣，江、曾的亲信，中共政治局常委王沪宁，成了习的总操盘手；江、曾的亲信，中共政治局常委、中纪委书记赵乐际，已露出“血债帮”的真面目；江、曾的亲信，中共政治局常委、国务院副总理韩正，可能天天盼习下台。</p>
 <p>中共大祸已临头，习继续保党，到时候，不仅保不了党，恐怕连性命都难保。</p>
-<p>责任编辑：高义</p>
+<p><span style="color: #008000;"><strong>▼ 相关影片</strong></span></p>
+<p><center><a width="640" b="360" src=""></a><a href="https://dhw62qyyxrv4n.cloudfront.net/Z6j1vQXzl"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/ej7dQo7w97Q" frameborder="0"allowfullscreen></a></center></p>
+<p>【<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%e7%b4%80%e5%85%83%e6%92%ad%e5%a0%b1.md#1">纪元播报</a>】制作组</p>
+<p>责任编辑：高义＃</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zdubkf396/djy/blob/master/gb/20/8/19/n12341429.md#1">王友群：习近平如何才能保命的四面镜子</a></li>
-<li><a href="https://github.com/zdubkf396/djy/blob/master/gb/20/9/27/n12433567.md#1">【翻墙必看】分析：中共政权终结于习近平</a></li>
-<li><a href="https://github.com/zdubkf396/djy/blob/master/gb/20/9/29/n12439539.md#1">美次卿向习近平喊话：推倒长城防火墙</a></li>
-<li><a href="https://github.com/zdubkf396/djy/blob/master/gb/20/10/2/n12448915.md#1">袁斌：假如习近平被确诊得了中共肺炎</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/19/n12341429.md#1">王友群：习近平如何才能保命的四面镜子</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/27/n12433567.md#1">【翻墙必看】分析：中共政权终结于习近平</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/29/n12439539.md#1">美次卿向习近平喊话：推倒长城防火墙</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/2/n12448915.md#1">袁斌：假如习近平被确诊得了中共肺炎</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/21/n11061288.md#1" target="_blank">林辉：毁黄帝炎帝陵 中共与中华民族水火不容</a></li><li><a href="https://github.com/zdubkf396/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/7/n11574300.md#1" target="_blank">他们为我们的生活带来光明（2）</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/27/n10936495.md#1" target="_blank">林辉：抗日名将殉国身后妻儿惨到乞讨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/11/n4637812.md#1" target="_blank">修炼法轮功 母亲摆脱严重糖尿病重获新生</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/3/n12450997.md#1">大千世界无奇不有 人死去百年竟能复活</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/9/21/n12420405.md#1">【成吉思汗】姻缘定 英雄聚 铁木真崛起</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/9/18/n12414341.md#1">为何编写淫书罪深重  刑罚无终了</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/9/30/n12441471.md#1">希腊神话故事教我们如何战胜恐惧</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/8/27/n12361718.md#1">【欺世大观】董存瑞炸碉堡另有故事</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/8/n12462492.md#1">【有冇搞错】美副总统辩论 彭斯表现远优于对手</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/7/n12460564.md#1">【新闻看点】彭贺提前对决2024？通俄门反调查</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/2/n12446632.md#1">【独家】朝鲜首爆氢弹 中共内部报告曝光</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/6/n12458026.md#1">赵薇连输102场官司 将连带赔偿逾8千万元</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/6/n12456305.md#1">【拍案惊奇】川普说出院是奇迹 习要当太上皇续权？</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/6/n12458026.md#1">赵薇连输102场官司 将连带赔偿逾8千万元</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/5/n12455254.md#1">六年前大陆拍戏患怪病 吴孟达暴瘦近照曝光</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/7/n12459794.md#1">李爱绮浴室重摔倒地不起 庆幸及时被发现送医</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/5/n12455857.md#1">范冰冰确定复出 好莱坞新片《355》海报曝光</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/7/n12460202.md#1">赵丽颖为冯绍峰庆生 甜喊昵称秀恩爱</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/6/n12456850.md#1">为什么F-22这么先进的战机仍配备机炮？</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/6/n12456347.md#1">美国农夫心脏病发作 60个邻居帮忙收割</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/6/n12455951.md#1">蛋白质吃不够让你肌肉变少 肌少症的4大原因</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/7/n12459977.md#1">癌症是糖类病？避开“黄金3恶”不让癌上身</a></li>
-<li><a href="https://github.com/iiedcs3357/djy/blob/master/gb/20/10/7/n12458966.md#1">陈水扁曝：凯达格兰大道差点变玛丽莲梦路</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zdubkf396/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zdubkf396/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/8/n12463151.htm">王友群：红二代四分五裂 习近平为谁保江山？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/8/n12463151.htm">王友群：红二代四分五裂 习近平为谁保江山？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zdubkf396/djy/blob/master/gb/20/10/8/n12463151.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zdubkf396/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zdubkf396/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zdubkf396/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zdubkf396/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdubkf396/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/8/n12463151.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
